--- a/Data Exploration AND PCA/Src/Point 1.ipynb
+++ b/Data Exploration AND PCA/Src/Point 1.ipynb
@@ -30,41 +30,41 @@
    "id": "9a26abbe-7339-4624-b25c-8b54ead157f3",
    "metadata": {},
    "source": [
-    "| Department                                       | GDP Millions (x_1) | Population (x_2) | GDP per capita Millions (x_3) |\r\n",
-    "|--------------------------------------------------|---------------------|-------------------|-------------------------------|\r\n",
-    "| Amazonas                                         | 1067855.672         | 76589             | 13.94267678                   |\r\n",
-    "| Antioquia                                        | 212514957.4         | 6407102           | 33.16865524                   |\r\n",
-    "| Arauca                                           | 8548114.653         | 262174            | 32.60473828                   |\r\n",
-    "| Atlántico                                        | 63764770.77         | 2535517           | 25.1486268                    |\r\n",
-    "| Bogotá D.C.                                      | 357258620.8         | 7412566           | 48.19634938                   |\r\n",
-    "| Bolívar                                          | 51404352.37         | 2070110           | 24.83170091                   |\r\n",
-    "| Boyacá                                           | 38858162.12         | 1217376           | 31.91960588                   |\r\n",
-    "| Caldas                                           | 23953112.45         | 998255            | 23.9949837                    |\r\n",
-    "| Caquetá                                          | 5461366.78          | 401849            | 13.59059443                   |\r\n",
-    "| Casanare                                         | 23660657.37         | 420504            | 56.26737766                   |\r\n",
-    "| Cauca                                            | 25758151.71         | 1464488           | 17.58850309                   |\r\n",
-    "| Cesar                                            | 37523918.98         | 1200574           | 31.25498218                   |\r\n",
-    "| Chocó                                            | 6001844.915         | 534826            | 11.2220515                    |\r\n",
-    "| Córdoba                                          | 24991953.76         | 1784783           | 14.00279685                   |\r\n",
-    "| Cundinamarca                                     | 91945942.28         | 2919060           | 31.49847632                   |\r\n",
-    "| Guainía                                          | 497704.0127         | 48114             | 10.34426597                   |\r\n",
-    "| Guaviare                                         | 1123857.696         | 82767             | 13.57857232                   |\r\n",
-    "| Huila                                            | 24011616.06         | 1100386           | 21.8210846                    |\r\n",
-    "| La Guajira                                       | 22262575.88         | 880560            | 25.28229295                   |\r\n",
-    "| Magdalena                                        | 19738417.36         | 1341746           | 14.710994                     |\r\n",
-    "| Meta                                             | 58439500.07         | 1039722           | 56.20685151                   |\r\n",
-    "| Nariño                                           | 21775426.15         | 1630592           | 13.35430699                   |\r\n",
-    "| Norte de Santander                               | 23056874.23         | 1491689           | 15.45689097                   |\r\n",
-    "| Putumayo                                          | 5616558.269         | 348182            | 16.13109888                   |\r\n",
-    "| Quindío                                          | 11941644.16         | 539904            | 22.11808795                   |\r\n",
-    "| Risaralda                                        | 23786362.42         | 943401            | 25.21341659                   |\r\n",
-    "| San   Andrés, Providencia y Santa Catalina (Archipiélago) | 2125410.333 | 61280             | 34.68358898                   |\r\n",
-    "| Santander                                        | 92276678.16         | 2184837           | 42.23504003                   |\r\n",
-    "| Sucre                                            | 11516270.76         | 904863            | 12.7270877                    |\r\n",
-    "| Tolima                                           | 30438180.15         | 1330187           | 22.8826324                    |\r\n",
-    "| Valle del Cauca                                  | 139863153.5         | 4475886           | 31.2481492                    |\r\n",
-    "| Vaupés                                           | 381851.6785         | 40797             | 9.359797989                   |\r\n",
-    "| Vichada                                          | 956576.6785         | 107808            | 8.872965629                   |\r\n"
+    "| Department                                       | GDP Millions (x_1) | Population (x_2) | GDP per capita Millions (x_3) |\n",
+    "|--------------------------------------------------|---------------------|-------------------|-------------------------------|\n",
+    "| Amazonas                                         | 1067855.672         | 76589             | 13.94267678                   |\n",
+    "| Antioquia                                        | 212514957.4         | 6407102           | 33.16865524                   |\n",
+    "| Arauca                                           | 8548114.653         | 262174            | 32.60473828                   |\n",
+    "| Atlántico                                        | 63764770.77         | 2535517           | 25.1486268                    |\n",
+    "| Bogotá D.C.                                      | 357258620.8         | 7412566           | 48.19634938                   |\n",
+    "| Bolívar                                          | 51404352.37         | 2070110           | 24.83170091                   |\n",
+    "| Boyacá                                           | 38858162.12         | 1217376           | 31.91960588                   |\n",
+    "| Caldas                                           | 23953112.45         | 998255            | 23.9949837                    |\n",
+    "| Caquetá                                          | 5461366.78          | 401849            | 13.59059443                   |\n",
+    "| Casanare                                         | 23660657.37         | 420504            | 56.26737766                   |\n",
+    "| Cauca                                            | 25758151.71         | 1464488           | 17.58850309                   |\n",
+    "| Cesar                                            | 37523918.98         | 1200574           | 31.25498218                   |\n",
+    "| Chocó                                            | 6001844.915         | 534826            | 11.2220515                    |\n",
+    "| Córdoba                                          | 24991953.76         | 1784783           | 14.00279685                   |\n",
+    "| Cundinamarca                                     | 91945942.28         | 2919060           | 31.49847632                   |\n",
+    "| Guainía                                          | 497704.0127         | 48114             | 10.34426597                   |\n",
+    "| Guaviare                                         | 1123857.696         | 82767             | 13.57857232                   |\n",
+    "| Huila                                            | 24011616.06         | 1100386           | 21.8210846                    |\n",
+    "| La Guajira                                       | 22262575.88         | 880560            | 25.28229295                   |\n",
+    "| Magdalena                                        | 19738417.36         | 1341746           | 14.710994                     |\n",
+    "| Meta                                             | 58439500.07         | 1039722           | 56.20685151                   |\n",
+    "| Nariño                                           | 21775426.15         | 1630592           | 13.35430699                   |\n",
+    "| Norte de Santander                               | 23056874.23         | 1491689           | 15.45689097                   |\n",
+    "| Putumayo                                          | 5616558.269         | 348182            | 16.13109888                   |\n",
+    "| Quindío                                          | 11941644.16         | 539904            | 22.11808795                   |\n",
+    "| Risaralda                                        | 23786362.42         | 943401            | 25.21341659                   |\n",
+    "| San   Andrés, Providencia y Santa Catalina (Archipiélago) | 2125410.333 | 61280             | 34.68358898                   |\n",
+    "| Santander                                        | 92276678.16         | 2184837           | 42.23504003                   |\n",
+    "| Sucre                                            | 11516270.76         | 904863            | 12.7270877                    |\n",
+    "| Tolima                                           | 30438180.15         | 1330187           | 22.8826324                    |\n",
+    "| Valle del Cauca                                  | 139863153.5         | 4475886           | 31.2481492                    |\n",
+    "| Vaupés                                           | 381851.6785         | 40797             | 9.359797989                   |\n",
+    "| Vichada                                          | 956576.6785         | 107808            | 8.872965629                   |\n"
    ]
   },
   {
@@ -3730,7 +3730,7 @@
    "metadata": {},
    "source": [
     "A difference can be observed between the values calculated in python for Q1, Q3, IQR, LOWER and UPPER compared to the values generated by the   plotly.express graph.\n",
-    "\r\n",
+    "\n",
     "This happens because the way Plotly Express handles outliers, calculates percentiles, and defines limits uses specific algorithms. However, these differences are normal and are due to the different approaches used both in the internal implementation of the libraries and in the \"manual\" calculation."
    ]
   },
@@ -3877,6 +3877,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "86d4f3dc-f77c-40c9-bb39-f0c6e87465b6",
+   "metadata": {},
+   "source": [
+    "Correlation and covariance are two statistical functions that measure the linear relationship between two forces. Both measure the strength and direction of the linear relationship. They can take negative values for inverse relationships. They can be zero for weak or non-existent relationships. Or, they can result in positive values for direct relationships.\n",
+    "\n",
+    "Unlike the covariance, the Pearson correlation (used in this work) is normalized and its standard values are $$[-1; 1]$$. It is based on the covariance, which is divided by the product of the standard deviation of both variables.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ca047f10-95aa-4f0c-b525-263241c43d54",
    "metadata": {},
    "source": [
@@ -3916,7 +3927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
